test_suite/test_cases/invalid/syntaxErr/variables/reservedWords2.ast
-- Test: reservedWords2.wacc

-- Uploaded file: 
---------------------------------------------------------------
# reserved keywords

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int skip = 2 ;
  skip
end
---------------------------------------------------------------

-- Compiler Output:
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 12:6 -- no viable alternative at input 'intskip'
1 parser error(s) detected, no further compilation attempted.

